Rename `com.template` package to `com.gatsinski.rems`

--- a/build.gradle
+++ b/build.gradle
@@ -147,6 +147,6 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
 
 task runTemplateClient(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    main = 'com.template.ClientKt'
+    main = 'com.gatsinski.rems.ClientKt'
     args 'localhost:10006'
 }
